themes/deploy/fhh.css
/*
// --------------------------------------------------------------------------------------------------------------------
// U.S. DEPARTMENT OF HEALTH AND HUMAN SERVICES (HHS)
// MY FAMILY HEALTH PORTRAIT (FHH)
// https://familyhistory.hhs.gov/ - Version 3.0
// This style sheet is organized in the following sections
// -- Basic HTML Element Styles
// -- Page Layout Containers + Styles
// -- Submodal + Popup + Dialogue Layout Containers + Styles + Wizard
// -- Form + Data Table Containers + Styles
// -- Miscellaneous Styles
// --------------------------------------------------------------------------------------------------------------------
*/

/* ************************************* */
/* ----- BASIC HTML ELEMENT STYLES ----- */
/* ************************************* */

.gshHeader {
  border-color: #e79baa;
  font-size: 10;
  margin-bottom: 4;
}


body {
    background: url('page_background.jpg') repeat-x scroll center top #ECE0D3;
    font-family: Arial, Helvetica, sans-serif;
    font-size: 75%;
    padding: 10px;
    text-align: center;
    min-width:900px;
}

.help {
  text-align:left;
}
/* ALL PAGES: makes pages that don't scroll the same width as pages that do scroll */
:root {
/*  overflow-y:scroll;
*/}

div.main_container {
    margin: 0 auto 10px auto;
    padding: 0px;
    text-align: left;
    vertical-align: top;
    width: 1000px;
}



/*<!--  Header Styles Below -->*/
div.header_container {
    border: 1px solid #000000;
    margin: 0px;
    padding: 0px;
    vertical-align: top;
}

div.content_container {
    border: 1px solid #000000;background-color:#fff;
    margin: 0px;
    padding: 0px;
    vertical-align: top;
}

table.banner {
    background-color: #E19C1B;
    border-bottom: 1px solid rgba(48, 0, 0, 1)
    height: 58px;
    margin: 0px;
    width: 100%;
}

.banner td.banner_right {
    padding: 0px;
    text-align: right;
}

table.nav {
    background-color: #00477A;
    border-top: 1px solid rgba(48, 0, 0, 1)
    margin: 1px 0px 0px 0px;
    width:1000px;
}

td.nav {
    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
    display: inline-block;
    color: #fff;
    font-size: .94em;
}

td.nav a {
    border-right: 1px solid #fff;
    color: #fff;
    padding: 4px 7px 3px 7px;
    text-decoration: none;
    white-space: nowrap;
}

button {
    border: 1px solid;
    border-radius: 4px;
    color:#fff;
    background-color:#337ab7;
    padding:2px 10px 2px 10px;
    font-size:85% !important;
    cursor:pointer;
}

#download_xml {

      border: 1px solid;
    border-radius: 4px;
    color:#fff;
    background-color:#337ab7;
    padding:2px 10px 2px 10px;
    font-size:85% !important;
    cursor:pointer;
}

#languageSelect {
  padding-left:5px;
}

#nav_help {
    border-left: 0px;
    border-right: 1px;
}

/*<!-- Main Styles -->*/

p {
    font-size: 1.0em;
    margin: 0em 0.5em 0em;
}

h1 {
    color: #109DBB;
    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
    font-size: 1.5em;
    font-style: normal;
    font-weight: bold;
    margin: 1em 0.5em 0em;
}

h2 {
    color: #109DBB; 
    font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
    font-size: 1.25em;
    font-style: italic;
    font-weight: bold;
    margin: 0.5em 0.5em 0em;
}

h3, h4, h5, h6 {
  color: #B42;
  font-family: Verdana, Geneva, Arial, Helvetica, sans-serif;
  font-size: 1.15em;
  font-style: normal;
  font-weight: bold;
}

a:link, a:visited {
  color: #0000FF;
  text-decoration: underline;
}

a:hover, a:active  {
  color: #0000FF;
  text-decoration: none;
}

.center_text {
  text-align:center;
  height:40px;
}

td.action {
  text-align:center;
  padding:5px;
  border: 1px solid #888;
}

td.information {
  font-weight:bold;
  padding:5px;
  border: 1px solid #888;
}

th.label {
  font-weight:bold;
  text-align:left;
  text-decoration:none;
}

a.button_link {
  background-color: #337AB7;
  color: #fff;
  white-space: nowrap
  /* DRC/CR Calculator: Added rounded corners <div> */
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
  border: 1px solid black;
  padding: 4px 7px 4px 7px;
  margin: 2px 3px 2px 3px;
  text-decoration: none;
  font-size: .86em;
}

a.button_link:active {
  background-color:#BBB;
  cursor:wait
}

.instructions {
  font-size:small;
  text-align:left;
  margin-left:6px;
}


.top_instructions {
    font-size:15px;
    text-align:left;
}

.top_instructions div.left {
    display:inline-block;
    width:75%;
}
.top_instructions div.right {
    display:inline-block;
    float:right;
}

table.summary_table {
  background-color: #FFFFFF;
  margin: 0px;
  width: 80%;
  border:1px solid black;
  margin-left:auto;
  margin-right:auto;
  border-collapse:collapse;
}

table.summary_table th {
  background-color: #FFE060;
  border-bottom: 1px solid #666666;
  border-right:1px solid #666666;
  color: #000000;
  font-weight: bold;
  margin: 0px;
  padding: 2px 10px;
  text-align: center;
  vertical-align: middle;
  text-decoration:none;
}

tr.summary_category_header_row {
  background-color: #888;
  border: 2px solid #666666;
  color: #FFF;
  font-weight: bold;
  text-align: center;
  vertical-align: middle;
}

table.disease_table {
  background-color: #FFFFFF;
  margin: 0px;
  width: 80%;
  border:1px solid black;
  margin-left:auto;
  margin-right:auto;
  border-collapse:collapse;
}

table.disease_table th {
  background-color: #FFE060;
  border-bottom: 1px solid #666666;
  border-right:1px solid #666666;
  color: #000000;
  font-weight: bold;
  margin: 0px;
  padding: 2px 10px;
  text-align: center;
  vertical-align: middle;
  text-decoration:none;
}

table.disease_table td {
  font-size:small;
  background-color: #FFFFFF;
  border-bottom: 1px solid #666666;
  border-right:1px solid #666666;
  color: #000000;
  font-weight: bold;
  margin: 0px;
  padding: 2px 10px;
  text-align: center;
  vertical-align: middle;
}


.footerTable
{  margin: 0px auto 0px auto;
}

.footerTable a
{  color:#0000ff;
}

.required {
  color: #FF0000;
  font-weight: bold;
}

.readonly {
  color: #808080;
  font-weight: normal;
}

.normal_text {
  text-align:left;
}

.title-bar {
  text-align:left;
  font-weight:bold; 
  color: #fff;
  background-color: #109DBA; 
  border-top: 1px solid #003366;
  border-bottom: 1px solid #003366;
  padding-left:10px;
}

.risk_calculator {
  border:1px solid black;
  -webkit-border-radius: 4px;
  -moz-border-radius: 4px;
  border-radius: 4px;
}

.risk_calculator:hover {
  background-color:#DDF;
}

.ui-widget-header {
  background-color: #FFE060; color:#000;
  background-image:none;
  border:1px solid rgba(53, 6, 2, 1);
}

.ui-widget-content {
  border: 2px solid #444;
  padding:1px;
  margin:10px;    
}

.ui-button {
border:0px solid transparent !important;
}
.ui-button-text {
background-color:#337AB7;
color:#fff;
border-radius:4px;
}


.ui-button-icon-only .ui-button-text{
background-color:transparent !important;
}
.ui-state-hover {
border-color:#337AB7 !important;
}

button.frontpage {
  border:1px solid black;
  padding:5px;
  width:200px;
}

.link-button {
  font: bold 14px Arial;
  text-decoration: none;
  background-color: #EEEEEE;
  color: #333333;
  padding: 2px 6px 2px 6px;
  border-top: 1px solid #CCCCCC;
  border-right: 1px solid #333333;
  border-bottom: 1px solid #333333;
  border-left: 1px solid #CCCCCC;
}

.colOneSimple {
  padding-right:40px;
}

a.clickable_link { cursor: pointer; color: blue; text-decoration: underline;}
a.clickable_link:hover,a.clickable_link.hover { text-decoration: none; }

td.race_checkbox {
border:2px ridge #109DBA;
}

td.race_checkbox input[type=checkbox] {
margin:10px;
padding-right:10px;
}

.disease_detail td {
text-align:left !important;

}

#health_data_entry_row td{
text-align:left !important;
padding:8px 0px 0px 4px !important;
}

#add_new_disease_button {
margin-left:8px;
}
a.link-button {
background-color:#337AB7;
color:#fff !important;
border-radius:4px;
padding:4px;
text-decoration:none;
}

#p_dialog {
padding-top:210px;
}
.modal-content #close{
  margin:2px;
background-color:#FFE060;
font-size:120% !important;
font-weight:bold;
border:1px solid #000 !important;
height:35px;
}


.modal-content #close button{
position:absolute;
right:

10px;
}


.modal-content #close button{
position:absolute;
right:10px;
top:7px;
}

#navBar {
background-color: #036;
height:33px;
text-align:left;
}

#navBar li {
list-style:none;
display:inline;
}

#navBar li a {
background-color:#337AB7;
padding:8px;
top:6px;
position:relative;
margin-top:5px;
color:#fff;
text-decoration:none;
}
.health_table {
border:0px solid #000 !important;
}

.health_table tr{
border:1px solid #000;
}
.health_table th{
  background-color:darkblue;
  color:#fff;
  padding:8px;
  vertical-align:top;
border-width: 0px 1px 0px 0px;
border-style:solid;
border-color:#ffff;
}
.health_table td{
border-width: 0px 1px 0px 0px;
border-style:solid;
border-color:#000;
padding:6px;
vertical-align:top;
}


#personal_info {
text-align:left;
font-weight:bold;
padding-bottom:10px;
}

.self_row {
background-color:#FFFFCC;
}


hr#health_table{
height:2px;
border-width:0;
color:#2A53A5;
background-color:#2A53A5;
margin:20px;
}


.health_table div.other_disease {
background-color:#00008B;
border-radius:12px;
border:1px solid #00008B;
color:#fff;
padding:4px 0px 4px 10px;
margin-bottom:5px;
}

table.form {
  width:50%;
  border:1px solid #43729a;
  margin-bottom:8px;margin-top:8px;
}

table.form th {
  padding-left:4px;
}


table.form td {
  padding-top:5px;
}

ul#disease_list {
list-style:none;
}

ul#disease_list li {
display:inline;
}

#health_table_filter {
text-align:right;
padding-top:15px;
font-weight:bold;
}

#health_table_filter input {
margin-left:5px;
}

#health_table_legend {
vertical-align:bottom;
text-align:right;
}

#health_table_action_buttons ul {
list-style:none;
padding:8px 0px 0px 0px;
}

#health_table_action_buttons li{
display:inline;
padding-right:5px;
}

#relatives_name {
  padding:0px;
}

#relatives_name a{
  padding:5px;
  margin:0px;
  display:block;
  width:100%;
  color:#000;
  text-decoration:none;
  cursor:pointer;
}

/* My FHH - NEW Navigation and actions */

.homeMain {
  border: 1px solid #41719c;
  margin: 0.5%;
  float: left;
  width: 99%;
}

.homeHead {
  margin-left: 5px;
}

.homeIndentText {
  margin-left: 38px !important;
}

.homeManage {
  border: 1px solid #41719c;
  float: left;
  width: 80%;
  height: 122px;
}

.homeText {
  margin-left: 2px;
  display: inline-block;
}

.saveText {
  margin-left: 7px !important;
}

.deleteText {
  margin-left: 8px !important;
}

.homeHelp {
  border: 1px solid #41719c;
  float: right;
  width: 20%;
  height: 122px;
  padding: 10px;
}

.homeHelpBtn {
  font-size: 1.0em !important;
  margin-left: 7px !important;
}

.homeHelpText {
  padding-top: 5px;
}

.homeHelpText p {
  margin-left: 5px;
  font-size: 1.3em;
}

.homeView {
  border: 1px solid #41719c;
  float: left;
  width: 40%;
  height: 62px;
}

.homeCheck {
  border: 1px solid #41719c;
  float: right;
  width: 60%;
  height: 62px;
}

.homeAdd {
  border: 1px solid #41719c;
  float: left;
  width: 100%;
}

/* Pedigree Diagram */

.btn_left {
  margin-right: 2px;
}

.btn_cleft {
  margin-right: 22px;
}

.btn_cright {
  margin-left: 22px;
}

.btn_right {
  margin-left: 2px;
}

.twin_status label{ 
  padding-right:2em;
}

div#person_is_alive{
  width:340px;
  padding:10px 0px 10px 0px;
  border:2px solid rgb(16, 157, 186);
  margin-top:10px;
}

.update_dialog_help li {
  padding:10px 0px 0px 0px;
}

.update_dialog_help li li{
  padding:4px 0px 0px 0px;
}

